rules to be added

--- a/11-Go-Game/index.html
+++ b/11-Go-Game/index.html
@@ -95,106 +95,106 @@
           <div class="blackGrid"></div>
         </div>
         <div class="playGrid">
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
+          <div class="redGrid" id="01"></div>
+          <div class="redGrid" id="02"></div>
+          <div class="redGrid" id="03"></div>
+          <div class="redGrid" id="04"></div>
+          <div class="redGrid" id="05"></div>
+          <div class="redGrid" id="06"></div>
+          <div class="redGrid" id="07"></div>
+          <div class="redGrid" id="08"></div>
+          <div class="redGrid" id="09"></div>
+          <div class="redGrid" id="010"></div>
+          <div class="redGrid" id="11"></div>
+          <div class="redGrid" id="12"></div>
+          <div class="redGrid" id="13"></div>
+          <div class="redGrid" id="14"></div>
+          <div class="redGrid" id="15"></div>
+          <div class="redGrid" id="16"></div>
+          <div class="redGrid" id="17"></div>
+          <div class="redGrid" id="18"></div>
+          <div class="redGrid" id="19"></div>
+          <div class="redGrid" id="110"></div>
+          <div class="redGrid" id="21"></div>
+          <div class="redGrid" id="22"></div>
+          <div class="redGrid" id="23"></div>
+          <div class="redGrid" id="24"></div>
+          <div class="redGrid" id="25"></div>
+          <div class="redGrid" id="26"></div>
+          <div class="redGrid" id="27"></div>
+          <div class="redGrid" id="28"></div>
+          <div class="redGrid" id="29"></div>
+          <div class="redGrid" id="210"></div>
+          <div class="redGrid" id="31"></div>
+          <div class="redGrid" id="32"></div>
+          <div class="redGrid" id="33"></div>
+          <div class="redGrid" id="34"></div>
+          <div class="redGrid" id="35"></div>
+          <div class="redGrid" id="36"></div>
+          <div class="redGrid" id="37"></div>
+          <div class="redGrid" id="38"></div>
+          <div class="redGrid" id="39"></div>
+          <div class="redGrid" id="310"></div>
+          <div class="redGrid" id="41"></div>
+          <div class="redGrid" id="42"></div>
+          <div class="redGrid" id="43"></div>
+          <div class="redGrid" id="44"></div>
+          <div class="redGrid" id="45"></div>
+          <div class="redGrid" id="46"></div>
+          <div class="redGrid" id="47"></div>
+          <div class="redGrid" id="48"></div>
+          <div class="redGrid" id="49"></div>
+          <div class="redGrid" id="410"></div>
+          <div class="redGrid" id="51"></div>
+          <div class="redGrid" id="52"></div>
+          <div class="redGrid" id="53"></div>
+          <div class="redGrid" id="54"></div>
+          <div class="redGrid" id="55"></div>
+          <div class="redGrid" id="56"></div>
+          <div class="redGrid" id="57"></div>
+          <div class="redGrid" id="58"></div>
+          <div class="redGrid" id="59"></div>
+          <div class="redGrid" id="510"></div>
+          <div class="redGrid" id="61"></div>
+          <div class="redGrid" id="62"></div>
+          <div class="redGrid" id="63"></div>
+          <div class="redGrid" id="64"></div>
+          <div class="redGrid" id="65"></div>
+          <div class="redGrid" id="66"></div>
+          <div class="redGrid" id="67"></div>
+          <div class="redGrid" id="68"></div>
+          <div class="redGrid" id="69"></div>
+          <div class="redGrid" id="610"></div>
+          <div class="redGrid" id="71"></div>
+          <div class="redGrid" id="72"></div>
+          <div class="redGrid" id="73"></div>
+          <div class="redGrid" id="74"></div>
+          <div class="redGrid" id="75"></div>
+          <div class="redGrid" id="76"></div>
+          <div class="redGrid" id="77"></div>
+          <div class="redGrid" id="78"></div>
+          <div class="redGrid" id="79"></div>
+          <div class="redGrid" id="710"></div>
+          <div class="redGrid" id="81"></div>
+          <div class="redGrid" id="82"></div>
+          <div class="redGrid" id="83"></div>
+          <div class="redGrid" id="84"></div>
+          <div class="redGrid" id="85"></div>
+          <div class="redGrid" id="86"></div>
+          <div class="redGrid" id="87"></div>
+          <div class="redGrid" id="88"></div>
+          <div class="redGrid" id="89"></div>
+          <div class="redGrid" id="810"></div>
+          <div class="redGrid" id="91"></div>
+          <div class="redGrid" id="92"></div>
+          <div class="redGrid" id="93"></div>
+          <div class="redGrid" id="94"></div>
+          <div class="redGrid" id="95"></div>
+          <div class="redGrid" id="96"></div>
+          <div class="redGrid" id="97"></div>
+          <div class="redGrid" id="98"></div>
+          <div class="redGrid" id="99"></div>
+          <div class="redGrid" id="910"></div>
         </div>
       </div>
     </div>
