some design added

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -4,5 +4,14 @@
     <link rel="stylesheet" href="style.css" />
     <script defer src="main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="bigPanel">
+      <div class="songInfo">
+        <div class="imagePanel"></div>
+        <div class="songInfoPanel"></div>
+        <div class="navPanel"></div>
+        <div class="soundBar"></div>
+      </div>
+    </div>
+  </body>
 </html>
