--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -7,7 +7,9 @@
   <body>
     <div class="bigPanel">
       <div class="songInfo">
-        <div class="imagePanel"></div>
+        <div class="imagePanel">
+          <img class="songImage" />
+        </div>
         <div class="songInfoPanel"></div>
         <div class="navPanel"></div>
         <div class="soundBar"></div>
