song info added

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -10,7 +10,15 @@
         <div class="imagePanel">
           <img class="songImage" />
         </div>
-        <div class="songInfoPanel"></div>
+        <div class="songInfoPanel">
+          <div class="leftSide">
+            <div class="songTitle">Title</div>
+            <div class="songArtist">Azis</div>
+          </div>
+          <div class="rightSide">
+            <div class="songAlbum">Go to album</div>
+          </div>
+        </div>
         <div class="navPanel"></div>
         <div class="soundBar"></div>
       </div>
