bussines architecture added

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
-    <script defer src="main.js"></script>
+    <script type="module" src="main.js"></script>
   </head>
   <body>
     <div class="bigPanel">
@@ -12,8 +12,8 @@
         </div>
         <div class="songInfoPanel">
           <div class="leftSide">
-            <div class="songTitle">Title</div>
-            <div class="songArtist">Azis</div>
+            <div class="songTitle"></div>
+            <div class="songArtist"></div>
           </div>
           <div class="rightSide">
             <div class="songAlbum">Go to album</div>
