images added and located on the DOM

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -19,7 +19,14 @@
             <div class="songAlbum">Go to album</div>
           </div>
         </div>
-        <div class="navPanel"></div>
+        <div class="navPanel">
+          <img
+            class="previousSongBtn navBtn"
+            src="./images/previousSongBtnImg.png"
+          />
+          <img class="pauseSongBtn navBtn" src="./images/pauseSongBtnImg.png" />
+          <img class="nextSongBtn navBtn" src="./images/nextSongBtnImg.png" />
+        </div>
         <div class="soundBar"></div>
       </div>
     </div>
