class Song added

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -27,6 +27,7 @@
           <img class="pauseSongBtn navBtn" src="./images/pauseSongBtnImg.png" />
           <img class="nextSongBtn navBtn" src="./images/nextSongBtnImg.png" />
         </div>
+        <!-- <div>!!!!!Duration!!!!!</div> -->
         <div class="soundBar"></div>
       </div>
     </div>
