duration panel added html

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -27,7 +27,12 @@
           <img class="pauseSongBtn navBtn" src="./images/pauseSongBtnImg.png" />
           <img class="nextSongBtn navBtn" src="./images/nextSongBtnImg.png" />
         </div>
-        <!-- <div>!!!!!Duration!!!!!</div> -->
+        <div class="durationPanel">
+          <div class="songTimers">
+            <div class="timePassed">0:00</div>
+            <div class="timeLeft">3:23</div>
+          </div>
+        </div>
         <div class="soundBar"></div>
       </div>
     </div>
