--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -32,6 +32,7 @@
             <div class="timePassed">0:00</div>
             <div class="timeLeft">3:23</div>
           </div>
+          <div class="progressBar"></div>
         </div>
         <div class="soundBar"></div>
       </div>
