place holder for progress bar added

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -32,7 +32,11 @@
             <div class="timePassed">0:00</div>
             <div class="timeLeft">3:23</div>
           </div>
-          <div class="progressBar"></div>
+          <div class="progressBar">
+            <div class="songProgress">
+              ------------------------------------------
+            </div>
+          </div>
         </div>
         <div class="soundBar"></div>
       </div>
