song time stamps are added

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -30,7 +30,7 @@
         <div class="durationPanel">
           <div class="songTimers">
             <div class="timePassed">0:00</div>
-            <div class="timeLeft">3:23</div>
+            <div class="timeLeft"></div>
           </div>
           <div class="progressBar">
             <div class="songProgress">
