play btn added and functinallity added

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -24,7 +24,7 @@
             class="previousSongBtn navBtn"
             src="./images/previousSongBtnImg.png"
           />
-          <img class="pauseSongBtn navBtn" src="./images/pauseSongBtnImg.png" />
+          <img class="pausePlaySongBtn navBtn" />
           <img class="nextSongBtn navBtn" src="./images/nextSongBtnImg.png" />
         </div>
         <div class="durationPanel">
