sound bar added

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -41,7 +41,26 @@
             </div>
           </div>
         </div>
-        <div class="soundBar"></div>
+        <div class="soundBar">
+          <div class="volume">
+            <input
+              class="inputBar"
+              type="range"
+              min="0"
+              max="100"
+              value="50"
+              class="volume-range"
+            />
+            <!-- <div class="icon">
+              <i class="fa fa-volume-up icon-size" aria-hidden="true"></i>
+            </div> -->
+            <div class="bar-hoverbox">
+              <div class="bar">
+                <div class="bar-fill"></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
