some changes applied

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -54,11 +54,11 @@
             <!-- <div class="icon">
               <i class="fa fa-volume-up icon-size" aria-hidden="true"></i>
             </div> -->
-            <div class="bar-hoverbox">
+            <!-- <div class="bar-hoverbox">
               <div class="bar">
                 <div class="bar-fill"></div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
