song progress bar added

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -37,7 +37,24 @@
           </div>
           <div class="progressBar">
             <div class="songProgress">
-              ------------------------------------------
+              <div class="songPrograssBar">
+                <input
+                  class="songProgressbar"
+                  type="range"
+                  min="0"
+                  max="100"
+                  value="50"
+                  class="volume-range"
+                />
+                <!-- <div class="icon">
+                  <i class="fa fa-volume-up icon-size" aria-hidden="true"></i>
+                </div> -->
+                <!-- <div class="bar-hoverbox">
+                  <div class="bar">
+                    <div class="bar-fill"></div>
+                  </div>
+                </div> -->
+              </div>
             </div>
           </div>
         </div>
