some changes added

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -26,7 +26,7 @@
           />
           <img
             class="pausePlaySongBtn navBtn"
-            src="./images/pauseSongBtnImg.png"
+            src="./images/playSongBtnImg.png"
           />
           <img class="nextSongBtn navBtn" src="./images/nextSongBtnImg.png" />
         </div>
