sound bar panle and img added

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -59,6 +59,7 @@
           </div>
         </div>
         <div class="soundBar">
+          <div><img class="volumeImg" src="./images/volumeImg.png" /></div>
           <div class="volume">
             <input
               class="inputBar"
