song credentials printer redone

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -11,11 +11,11 @@
           <img class="songImage" />
         </div>
         <div class="songInfoPanel">
-          <div class="leftSide">
+          <div class="titlePanel">
             <div class="songTitle"></div>
-            <div class="songArtist"></div>
           </div>
-          <div class="rightSide">
+          <div class="bottomPanel">
+            <div class="songArtist"></div>
             <div class="songAlbum">Go to album</div>
           </div>
         </div>
