album page created

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="bigPanel">
-      <div class="songInfo">
+      <div class="songInfo hidden">
         <div class="imagePanel">
           <img class="songImage" />
         </div>
@@ -79,6 +79,17 @@
             </div> -->
           </div>
         </div>
+      </div>
+      <div class="albumInfo">
+        <div class="imagePanel">
+          <img class="albumImage" />
+        </div>
+        <div class="albumData">
+          <div class="AlbumTitle">asad</div>
+          <div class="albumArtist">asad</div>
+        </div>
+        <div class="albumSongs"></div>
+        <div class="currentlyPlayingSongPanel"></div>
       </div>
     </div>
   </body>
