test case added and some album html and css

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -85,8 +85,8 @@
           <img class="albumImage" />
         </div>
         <div class="albumData">
-          <div class="AlbumTitle">asad</div>
-          <div class="albumArtist">asad</div>
+          <div class="AlbumTitle"></div>
+          <div class="albumArtist"></div>
         </div>
         <div class="albumSongs"></div>
         <div class="currentlyPlayingSongPanel"></div>
