--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -88,7 +88,18 @@
           <div class="AlbumTitle"></div>
           <div class="albumArtist"></div>
         </div>
-        <div class="albumSongs"></div>
+        <div class="albumSongs">
+          <div class="songPanel">
+            <div class="leftSide">
+              <img class="songImg" />
+              <h2>image</h2>
+              <h2 class="songName">Song name</h2>
+            </div>
+            <div class="rightSide">
+              <h2>image</h2>
+            </div>
+          </div>
+        </div>
         <div class="currentlyPlayingSongPanel"></div>
       </div>
     </div>
