--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -96,7 +96,7 @@
               <h2 class="songName">Song name</h2>
             </div>
             <div class="rightSide">
-              <h2>image</h2>
+              <img src="./images/playSongBtnImg.png" />
             </div>
           </div>
         </div>
