--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -96,7 +96,10 @@
               <h2 class="songName">Song name</h2>
             </div>
             <div class="rightSide">
-              <img src="./images/playSongBtnImg.png" />
+              <img
+                class="albumSongsPlayBtn"
+                src="./images/playSongBtnImg.png"
+              />
             </div>
           </div>
         </div>
