currently playing song added

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -103,7 +103,16 @@
             </div>
           </div>
         </div>
-        <div class="currentlyPlayingSongPanel"></div>
+        <div class="currentlyPlayingSongPanel">
+          <div class="leftSide">
+            <img class="songImg" />
+            <h2>image</h2>
+            <h2 class="songName">Currently playing song</h2>
+          </div>
+          <div class="rightSide">
+            <img class="albumSongsPlayBtn" src="./images/pauseSongBtnImg.png" />
+          </div>
+        </div>
       </div>
     </div>
   </body>
