album songs are listed

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -89,7 +89,7 @@
           <div class="albumArtist"></div>
         </div>
         <div class="albumSongs">
-          <div class="songPanel">
+          <!-- <div class="songPanel">
             <div class="leftSide">
               <img class="songImg" />
               <h2>image</h2>
@@ -101,7 +101,7 @@
                 src="./images/playSongBtnImg.png"
               />
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="currentlyPlayingSongPanel">
           <div class="leftSide">
