song to album connection made

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="bigPanel">
-      <div class="songInfo hidden">
+      <div class="songInfo">
         <div class="imagePanel">
           <img class="songImage" />
         </div>
@@ -80,7 +80,7 @@
           </div>
         </div>
       </div>
-      <div class="albumInfo">
+      <div class="albumInfo hidden">
         <div class="imagePanel">
           <img class="albumImage" />
         </div>
