some new stuff is added

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -110,7 +110,10 @@
             <h2 class="songName">Currently playing song</h2>
           </div>
           <div class="rightSide">
-            <img class="albumSongsPlayBtn" src="./images/pauseSongBtnImg.png" />
+            <img
+              class="currentSongPlayBtn"
+              src="./images/pauseSongBtnImg.png"
+            />
           </div>
         </div>
       </div>
