currently playing song added to album page

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -106,8 +106,9 @@
         <div class="currentlyPlayingSongPanel">
           <div class="leftSide">
             <img class="songImg" />
-            <h2>image</h2>
-            <h2 class="songName">Currently playing song</h2>
+            <div class="titleHolder">
+              <h2 class="curPlayingSongTitle"></h2>
+            </div>
           </div>
           <div class="rightSide">
             <img
