play pause btn works for current song  album page

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -104,7 +104,7 @@
           </div> -->
         </div>
         <div class="currentlyPlayingSongPanel">
-          <div class="leftSide">
+          <div class="leftSide curPlayingSongLeftSide">
             <img class="songImg" />
             <div class="titleHolder">
               <h2 class="curPlayingSongTitle"></h2>
