some changes are made

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -111,10 +111,7 @@
             </div>
           </div>
           <div class="rightSide">
-            <img
-              class="currentSongPlayBtn"
-              src="./images/pauseSongBtnImg.png"
-            />
+            <img class="currentSongPlayBtn" src="./images/playSongBtnImg.png" />
           </div>
         </div>
       </div>
