search page added

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -6,7 +6,14 @@
   </head>
   <body>
     <div class="bigPanel">
-      <div class="songInfo">
+      <div class="searchPanel">
+        <div class="searchBox">
+          <h1 class="searchText">Search:</h1>
+          <input class="searchBar" type="text" />
+        </div>
+        <div class="resultsBox"></div>
+      </div>
+      <div class="songInfo hidden">
         <div class="imagePanel">
           <img class="songImage" />
         </div>
