search page css and html added and image

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -9,7 +9,10 @@
       <div class="searchPanel">
         <div class="searchBox">
           <h1 class="searchText">Search:</h1>
-          <input class="searchBar" type="text" />
+          <div class="searchingPanel">
+            <input class="searchBar" type="text" />
+            <img class="magnifyingGlass" src="./images/magnifying glass.png" />
+          </div>
         </div>
         <div class="resultsBox"></div>
       </div>
