search page results panel added

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="bigPanel">
-      <div class="searchPanel">
+      <div class="searchPanel hidden">
         <div class="searchBox">
           <h1 class="searchText">Search:</h1>
           <div class="searchingPanel">
@@ -14,9 +14,114 @@
             <img class="magnifyingGlass" src="./images/magnifying glass.png" />
           </div>
         </div>
-        <div class="resultsBox"></div>
+        <div class="resultsBox">
+          <div class="songPanel">
+            <div class="leftSide">
+              <img class="songImg11111" />
+              <h2>image</h2>
+              <h2 class="songName">Song name</h2>
+            </div>
+            <div class="rightSide">
+              <img
+                class="albumSongsPlayBtn"
+                src="./images/playSongBtnImg.png"
+              />
+            </div>
+          </div>
+          <div class="songPanel">
+            <div class="leftSide">
+              <img class="songImg1111" />
+              <h2>image</h2>
+              <h2 class="songName">Song name</h2>
+            </div>
+            <div class="rightSide">
+              <img
+                class="albumSongsPlayBtn"
+                src="./images/playSongBtnImg.png"
+              />
+            </div>
+          </div>
+          <!-- <div class="songPanel">
+            <div class="leftSide">
+              <img class="songImg" />
+              <h2>image</h2>
+              <h2 class="songName">Song name</h2>
+            </div>
+            <div class="rightSide">
+              <img
+                class="albumSongsPlayBtn"
+                src="./images/playSongBtnImg.png"
+              />
+            </div>
+          </div> -->
+          <!-- <div class="songPanel">
+            <div class="leftSide">
+              <img class="songImg" />
+              <h2>image</h2>
+              <h2 class="songName">Song name</h2>
+            </div>
+            <div class="rightSide">
+              <img
+                class="albumSongsPlayBtn"
+                src="./images/playSongBtnImg.png"
+              />
+            </div>
+          </div> -->
+          <!-- <div class="songPanel">
+            <div class="leftSide">
+              <img class="songImg" />
+              <h2>image</h2>
+              <h2 class="songName">Song name</h2>
+            </div>
+            <div class="rightSide">
+              <img
+                class="albumSongsPlayBtn"
+                src="./images/playSongBtnImg.png"
+              />
+            </div>
+          </div> -->
+          <!-- <div class="songPanel">
+            <div class="leftSide">
+              <img class="songImg" />
+              <h2>image</h2>
+              <h2 class="songName">Song name</h2>
+            </div>
+            <div class="rightSide">
+              <img
+                class="albumSongsPlayBtn"
+                src="./images/playSongBtnImg.png"
+              />
+            </div>
+          </div> -->
+          <!-- <div class="songPanel">
+            <div class="leftSide">
+              <img class="songImg" />
+              <h2>image</h2>
+              <h2 class="songName">Song name</h2>
+            </div>
+            <div class="rightSide">
+              <img
+                class="albumSongsPlayBtn"
+                src="./images/playSongBtnImg.png"
+              />
+            </div>
+          </div> -->
+          <!-- <div class="songPanel">
+            <div class="leftSide">
+              <img class="songImg" />
+              <h2>image</h2>
+              <h2 class="songName">Song name</h2>
+            </div>
+            <div class="rightSide">
+              <img
+                class="albumSongsPlayBtn"
+                src="./images/playSongBtnImg.png"
+              />
+            </div>
+          </div> -->
+        </div>
       </div>
-      <div class="songInfo hidden">
+      <div class="songInfo">
         <div class="imagePanel">
           <img class="songImage" />
         </div>
