--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="bigPanel">
-      <div class="searchPanel hidden">
+      <div class="searchPanel">
         <div class="searchBox">
           <h1 class="searchText">Search:</h1>
           <div class="searchingPanel">
@@ -17,7 +17,7 @@
         <div class="resultsBox">
           <div class="songPanel">
             <div class="leftSide">
-              <img class="songImg11111" />
+              <img class="songImgSearchPanel" />
               <h2>image</h2>
               <h2 class="songName">Song name</h2>
             </div>
@@ -28,19 +28,7 @@
               />
             </div>
           </div>
-          <div class="songPanel">
-            <div class="leftSide">
-              <img class="songImg1111" />
-              <h2>image</h2>
-              <h2 class="songName">Song name</h2>
-            </div>
-            <div class="rightSide">
-              <img
-                class="albumSongsPlayBtn"
-                src="./images/playSongBtnImg.png"
-              />
-            </div>
-          </div>
+
           <!-- <div class="songPanel">
             <div class="leftSide">
               <img class="songImg" />
@@ -121,7 +109,7 @@
           </div> -->
         </div>
       </div>
-      <div class="songInfo">
+      <div class="songInfo hidden">
         <div class="imagePanel">
           <img class="songImage" />
         </div>
