--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -17,8 +17,8 @@
         <div class="resultsBox">
           <div class="songPanel">
             <div class="leftSide">
-              <img class="songImgSearchPanel" />
-              <h2>image</h2>
+              <img class="songImg" />
+              <h2 class="id hidden">some id</h2>
               <h2 class="songName">Song name</h2>
             </div>
             <div class="rightSide">
