--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -208,7 +208,7 @@
         </div>
         <div class="currentlyPlayingSongPanel">
           <div class="leftSide curPlayingSongLeftSide">
-            <img class="songImg" />
+            <img class="songImg curSong" />
             <div class="titleHolder">
               <h2 class="curPlayingSongTitle"></h2>
             </div>
