html code changes

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -15,7 +15,7 @@
           </div>
         </div>
         <div class="resultsBox">
-          <div class="songPanel">
+          <!-- <div class="songPanel">
             <div class="leftSide">
               <img class="songImg" />
               <h2 class="id hidden">some id</h2>
@@ -27,7 +27,7 @@
                 src="./images/playSongBtnImg.png"
               />
             </div>
-          </div>
+          </div> -->
 
           <!-- <div class="songPanel">
             <div class="leftSide">
