--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -14,7 +14,7 @@
             <img class="magnifyingGlass" src="./images/magnifying glass.png" />
           </div>
         </div>
-        <div class="resultsBox">
+        <div class="resultsBox search">
           <!-- <div class="songPanel">
             <div class="leftSide">
               <img class="songImg" />
