go back button added

--- a/12-MusicApp/index.html
+++ b/12-MusicApp/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div class="bigPanel">
+      <div class="backButton"><- Go Back</div>
       <div class="searchPanel">
         <div class="searchBox">
           <h1 class="searchText">Search:</h1>
