layout almost done

--- a/Sam Auto/index.html
+++ b/Sam Auto/index.html
@@ -1,41 +1,87 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="grid_container">
-      <header class="layoutHeader">
-        <div class="headerAndLogo"><h1 class="header">Sam Auto</h1></div>
+    <header class="layoutHeader">
+      <div class="headerAndLogo"><h1 class="header">Sam Auto</h1></div>
 
-        <nav class="navigationBar">
-          <ul class="nav-links">
-            <input type="checkbox" id="checkbox_toggle" />
-            <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+      <nav class="navigationBar">
+        <ul class="nav-links">
+          <input type="checkbox" id="checkbox_toggle" />
+          <label for="checkbox_toggle" class="hamburger">&#9776;</label>
 
-            <div class="menu">
-              <li><a href="/">Home</a></li>
-              <li><a href="/">About</a></li>
-              <li><a href="/">Pricing</a></li>
-              <li><a href="/">Contact</a></li>
-            </div>
-          </ul>
-        </nav>
-      </header>
-      <section class="layoutMiddleLayer">
-        <div class="orderBar">
-          <button class="btnrecentlyAdded">Recently Added</button>
-          <button class="btnTopRated">Top Rated Vehicles</button>
-        </div>
-        <div class="contentHolder">
-          <div class="car"></div>
-          <div class="car"></div>
-          <div class="car"></div>
-          <div class="car"></div>
-          <div class="car"></div>
-        </div>
-      </section>
-      <footer class="layoutFooter">footer</footer>
+          <div class="menu">
+            <li><a href="/">Home</a></li>
+            <li><a href="/">About</a></li>
+            <li><a href="/">Pricing</a></li>
+            <li><a href="/">Contact</a></li>
+          </div>
+        </ul>
+      </nav>
+    </header>
+    <div class="layoutMiddleLayer">
+      <div class="orderBar">
+        <button class="btnrecentlyAdded">Recently Added</button>
+        <button class="btnTopRated">Top Rated Vehicles</button>
+      </div>
+      <div class="contentHolder">
+        <div class="car"></div>
+        <div class="car"></div>
+        <div class="car"></div>
+        <div class="car"></div>
+        <div class="car"></div>
+      </div>
     </div>
+    <footer id="footer">
+      <h1>This is Footer.</h1>
+    </footer>
+  </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Scrollable Page</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header class="layoutHeader">
+      <div class="headerAndLogo"><h1 class="header">Sam Auto</h1></div>
+
+      <nav class="navigationBar">
+          <input type="checkbox" id="checkbox_toggle" />
+          <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+
+          <div class="menu">
+            <li><a href="/">Home</a></li>
+            <li><a href="/">About</a></li>
+            <li><a href="/">Pricing</a></li>
+            <li><a href="/">Contact</a></li>
+          </div>
+      </nav>
+    </header>
+
+    <div class="layoutMiddleLayer">
+      <div class="orderBar">
+        <button class="btnrecentlyAdded">Recently Added</button>
+        <button class="btnTopRated">Top Rated Vehicles</button>
+      </div>
+      <div class="contentHolder">
+        <div class="car"></div>
+        <div class="car"></div>
+        <div class="car"></div>
+        <div class="car"></div>
+        <div class="car"></div>
+      </div>
+    
+      </div>
+    </div>
+    <footer class="footer">
+      <p>This is the footer of Sam Auto</p>
+    </footer>
   </body>
 </html>
