--- a/Sam Auto/index.html
+++ b/Sam Auto/index.html
@@ -41,11 +41,8 @@
 </html> -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scrollable Page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
