catalogue layout done

--- a/Sam Auto/index.html
+++ b/Sam Auto/index.html
@@ -12,9 +12,10 @@
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
 
           <div class="menu">
-            <li><a href="/">Home</a></li>
-            <li><a href="/">About</a></li>
-            <li><a href="/">Pricing</a></li>
+            <li><a href="/">All Vehicles</a></li>
+            <li><a href="/">Search</a></li>
+            <li><a href="/">My Garage</a></li>
+            <li><a href="/">My Profile</a></li>
             <li><a href="/">Contact</a></li>
           </div>
       </nav>
