--- a/Sam Auto/index.html
+++ b/Sam Auto/index.html
@@ -11,13 +11,13 @@
           <input type="checkbox" id="checkbox_toggle" />
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
 
-          <div class="menu">
+          <ul class="menu">
             <li><a href="/">All Vehicles</a></li>
             <li><a href="/">Search</a></li>
             <li><a href="/">My Garage</a></li>
             <li><a href="/">My Profile</a></li>
             <li><a href="/">Contact</a></li>
-          </div>
+          </ul>
       </nav>
     </header>
 
@@ -34,7 +34,7 @@
         <div class="car"></div>
       </div>
     
-      </div>
+    </div>
     </div>
     <footer class="footer">
       <p>This is the footer of Sam Auto</p>
