--- a/Sam Auto/index.html
+++ b/Sam Auto/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
+    <script type="module" src="main.js"></script>
   </head>
   <body>
     <header class="layoutHeader">
@@ -20,7 +21,7 @@
           </ul>
       </nav>
     </header>
-
+<!-- 
     <div class="layoutMiddleLayer">
       <div class="orderBar">
         <button class="btnrecentlyAdded">Recently Added</button>
@@ -34,7 +35,8 @@
         <div class="car"></div>
       </div>
     
-    </div>
+    </div> -->
+
     </div>
     <footer class="footer">
       <p>This is the footer of Sam Auto</p>
