Home page added

--- a/Sam Auto/index.html
+++ b/Sam Auto/index.html
@@ -21,20 +21,35 @@
           </ul>
       </nav>
     </header>
-<!-- 
-    <div class="layoutMiddleLayer">
-      <div class="orderBar">
-        <button class="btnrecentlyAdded">Recently Added</button>
-        <button class="btnTopRated">Top Rated Vehicles</button>
+
+    <div class="layoutMiddleLayerHomePage">
+      <div class="titleHolder">
+        <h2>About us</h2>
       </div>
-      <div class="contentHolder">
-        <div class="car"></div>
-        <div class="car"></div>
-        <div class="car"></div>
-        <div class="car"></div>
-        <div class="car"></div>
+      <div class="textHolder">
+        <p>
+          Established in 2004 by Samuil Kozarov, Sam Auto is a renowned car dealership located in Sofia, Bulgaria. With over a decade of expertise, our dedicated team has garnered a loyal clientele, many of whom have evolved into valued customers. At Sam Auto, we specialize in high-end vehicle sales, offering a wide range of premium vehicles to meet the diverse needs of our customers. Our approach to business is characterized by professionalism, flexibility, and a commitment to customer satisfaction. We strive to make every transaction seamless and enjoyable, ensuring that each client receives personalized attention and expert guidance throughout the buying process. Trust Sam Auto for your next vehicle purchase and experience unparalleled service and quality.
       </div>
-    
+      <div class="imageHolder">
+        <img src="images/SamAuto Logo.png">
+      </div>
+    </div>
+
+
+  <!-- CATALOGUE -->
+    <!-- <div class="layoutMiddleLayerAllVehicles">
+      
+        <div class="orderBar">
+          <button class="btnrecentlyAdded">Recently Added</button>
+          <button class="btnTopRated">Top Rated Vehicles</button>
+        </div>
+        <div class="contentHolder">
+          <div class="car"></div>
+          <div class="car"></div>
+          <div class="car"></div>
+          <div class="car"></div>
+          <div class="car"></div>
+        </div>
     </div> -->
 
     </div>
